Switched to using custom Message instead of parsing json